--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "dwolla-v2": "^3.4.0",
     "next": "14.2.0",
     "plaid": "^39.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-plaid-link": "^3.5.0"
+    "react-plaid-link": "^3.5.0",
+    "stripe": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
